fixed review indicator and export button alignments (#1294)
* fixed export button alignment, fixed review indicator cell variable width

* fixed review indicator cell width

* used css variable instead of an hardcoded value, used classNames from classname module

--- a/client/styles/fraTable.scss
+++ b/client/styles/fraTable.scss
@@ -142,6 +142,10 @@
   right: 0;
 }
 
+.fra-table__review-cell {
+  width: 32px;
+}
+
 .fra-table__hidden-cell {
   display: none;
 }
